# kerchunk

./: .gitignore  .gitmodules  99-rimlite.rules  APRS.md  ARCH-COR-DTMF.md  ARCHITECTURE.md  CLAUDE.md  CTCSS_ROUTING.md  FEATURES.md  FREESWITCH.md  LINK-PROTOCOL.md  Makefile  Makefile.am  Makefile.in  Makefile.old  PIPER.md  PLAN-AUDIO-TICK.md  PLAN-CDR-UI.md  PLAN-LINK.md  PLAN-MOD-AI.md  PLAN-MOD-SPLITS.md  PLAN-STATE-MODEL.md  README.md  SCHEDULER_THREADS.md  USAGE.md  compile_flags.txt  config.h.in  configure  configure.ac  kerchunk-android.md  kerchunk.conf.example  kerchunkd.service  reflectd.conf.example  system_prompt.md.example  users.conf.example
.github/workflows/: ci.yml  release.yml
cli/: kerchunk.c  linenoise.c  linenoise.h
debian/: changelog  control  copyright  files  kerchunk-reflectd.install  kerchunk-reflectd.postinst  kerchunk-reflectd.postrm  kerchunk-reflectd.service  kerchunk.install  kerchunk.kerchunkd.service  kerchunk.postinst  kerchunk.postinst.debhelper  kerchunk.postrm  kerchunk.postrm.debhelper  kerchunk.prerm  kerchunk.substvars  kerchunk.tmpfiles  kerchunk.udev  rules
include/: kerchunk.h  kerchunk_audio.h  kerchunk_audio_ring.h  kerchunk_audio_tick.h  kerchunk_config.h  kerchunk_console.h  kerchunk_events.h  kerchunk_hid.h  kerchunk_ini_edit.h  kerchunk_link_proto.h  kerchunk_log.h  kerchunk_module.h  kerchunk_queue.h  kerchunk_rrd.h  kerchunk_sched.h  kerchunk_tx_state.h  kerchunk_txactivity.h  kerchunk_user.h  kerchunk_wav.h
modules/: mod_ai.c  mod_aprs.c  mod_asr.c  mod_caller.c  mod_cdr.c  mod_courtesy.c  mod_cwid.c  mod_dtmfcmd.c  mod_emergency.c  mod_flex.c  mod_freeswitch.c  mod_gpio.c  mod_link.c  mod_logger.c  mod_nws.c  mod_otp.c  mod_parrot.c  mod_poc.c  mod_pocsag.c  mod_recorder.c  mod_repeater.c  mod_scrambler.c  mod_sdr.c  mod_stats.c  mod_sysstats.c  mod_time.c  mod_tones.c  mod_tts.c  mod_txcode.c  mod_voicemail.c  mod_weather.c  mod_web.c  mod_webhook.c
scripts/: benchmark-asr.sh  benchmark-voices.sh  fix-cdr-csv.py  generate-all-wavs.sh  generate-changelog.sh  generate-phone-wavs.sh  install-nemo-deps.sh
src/: kerchunk_audio.c  kerchunk_audio_ring.c  kerchunk_audio_tick.c  kerchunk_config.c  kerchunk_console.c  kerchunk_core.c  kerchunk_events.c  kerchunk_evt_json.c  kerchunk_hid.c  kerchunk_ini_edit.c  kerchunk_log.c  kerchunk_modules.c  kerchunk_queue.c  kerchunk_resp.c  kerchunk_rrd.c  kerchunk_sched.c  kerchunk_socket.c  kerchunk_threads.c  kerchunk_timer.c  kerchunk_tx_state.c  kerchunk_txactivity.c  kerchunk_user.c  kerchunk_wav.c  main.c
src/reflectd/: audio.c  audio.h  config.c  config.h  link_probe.c  main.c  recordings.c  recordings.h
tests/: test_audio_ring.c  test_audio_tick_rx.c  test_audio_tick_tx.c  test_config.c  test_cwid.c  test_events.c  test_integ_caller.c  test_integ_cdr.c  test_integ_cwid.c  test_integ_decode.c  test_integ_dtmfcmd.c  test_integ_emergency.c  test_integ_freeswitch.c  test_integ_mock.h  test_integ_otp.c  test_integ_parrot.c  test_integ_recorder.c  test_integ_repeater.c  test_integ_scrambler.c  test_integ_stats.c  test_integ_time.c  test_integ_timer.c  test_integ_txcode.c  test_integ_userdb.c  test_integ_voicemail.c  test_integration.c  test_link.sh  test_main.c  test_queue.c  test_repeater.c  test_resp.c  test_stubs.c  test_tx_state.c  test_txactivity.c  test_web_acl.c
tools/: ctcss_test.c  cw_check.c  dcs_alignment.c  dcs_bruteforce.c  dcs_decode_wav.c  dcs_diag.c  dtmf_test.c  gen_dcs_orbits.c  gen_orbit_hash.c  kerchunk_diag.c  sdr_test.c
web/: admin.html  capture-processor.js  config.html  coverage.html  index.html  manifest.json  md.js  ptt.html  register.html  stream-processor.js  sw.js  users.html
web/admin/: bulletin.html  cdr.html  config.html  coverage.html  index.html  link.html  manifest.json  ptt.html  users.html
web/reflectd/: config.html  index.html  recordings.html
